--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,11 @@
 *{
 margin:0;
 }
+
+#homepage{
+ width: 100%;
+ min-height: 500px;
+ background-color: blue;
+ align-items: center;
+ border-color: 20px solid black;
+}
