changes to styles and some changes to index

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,11 @@ header div {
   font-size: 2rem;
   font-weight: bold;
   text-transform: uppercase;
+  color: black;
+}
+header div a {
+  text-decoration: none;
+  color: black;
 }
 
 div i {
